# pyopensky

./: .buildinfo  .gitattributes  .gitignore  README.rst  agents.md  api_reference.html  credentials.html  genindex.html  impala.html  index.html  installation.html  license.txt  objects.inv  pyproject.toml  readme.md  rebuild.html  rest.html  search.html  searchindex.js  setup.py  trino.html  trino_advanced.html
.github/: dependabot.yml
.github/workflows/: build-docs.yml  pypi_publish.yml  run_tests.yml
_sources/: credentials.rst.txt  impala.rst.txt  index.rst.txt  installation.rst.txt  trino.rst.txt
_static/: documentation_options.js  main_stylesheet.css
docs/source/: api_reference.rst  conf.py  credentials.rst  index.rst  rebuild.rst  rest.rst  trino.rst  trino_advanced.rst
pymodes_opensky/: ehs_helper.py  meteo_helper.py  opensky_impala_wrapper.py  ssh_client.py
pyms4os/: __init__.py  ehs_helper.py  meteo_helper.py  opensky_impala_wrapper.py  ssh_client.py
pyopensky/: __init__.py  ehs_helper.py  impala_wrapper.py  meteo_helper.py  ssh_client.py
scripts/: decode_ehs.py  decode_pymodes.py  decode_rs1090.py  download_s3.py  download_trino.py  s3_trino.py
src/pyopensky/: __init__.py  api.py  config.py  impala.py  rebuild.py  rest.py  s3.py  schema.py  time.py  trino.py  tzdata.py
src/pyopensky/decoders/: __init__.py  base.py  pymodes.py  rs1090.py
test/: test_ehs_helper.py  test_meteo_helper.py  test_opensky_query_adsb.py  test_opensky_query_raw.py
tests/: conftest.py  test_impala.py  test_rebuild.py  test_rest.py  test_s3.py  test_trino.py  test_tzdata.py
