[tool.poetry]
name = "pyopensky"
version = "2.6"
description = "A Python interface for OpenSky database"
repository = "https://github.com/open-aviation/pyopensky/"
authors = ["Xavier Olive <git@xoolive.org>", "Junzi Sun <j.sun-1@tudelft.nl>"]
license = "MIT"
readme = "readme.md"
include = [
    "license.txt",
    "py.typed",
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = ">=1.5"
trino = { version = ">=0.322", extras = ['sqlalchemy'] }
minio = ">=7.1"
appdirs = ">=1.4.4"
tqdm = ">=4.65.0"
pyarrow = ">=11.0.0"
typing-extensions = ">=4.5.0"
pyjwt = ">=2.7.0"
paramiko = ">=2.7"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.1.1"
mypy = ">=1.0.1"
ruff = ">=0.0.253"
pytest = ">=7.2.1"
ipykernel = ">=6.21.2"
types-requests = ">=2.28.11.15"
types-paramiko = ">=3.3.0.0"
Sphinx = ">=5.1"
sphinx-design = ">=0.4.1"
sphinx-rtd-theme = ">=0.5.2"
sphinx-autodoc-typehints = ">=1.17,!=1.21.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target_version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
lint.select = [
  "E", "W",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "NPY",  # numpy
  # "PD",  # pandas
  "DTZ", # flake8-datetimez
  "RUF"
]
line-length = 80
target-version = "py38"

[tool.ruff.lint.isort]
known-first-party = ["numpy", "pandas"]

[tool.mypy]
python_version = 3.8
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
